--- a/index.html
+++ b/index.html
@@ -96,8 +96,8 @@
 						<div class="inner split">
 							<div>
 								<section>
-									<h2>Magna feugiat sed adipiscing</h2>
-									<p>Nulla consequat, ex ut suscipit rutrum, mi dolor tincidunt erat, et scelerisque turpis ipsum eget quis orci mattis aliquet. Maecenas fringilla et ante at lorem et ipsum. Dolor nulla eu bibendum sapien. Donec non pharetra dui. Nulla consequat, ex ut suscipit rutrum, mi dolor tincidunt erat, et scelerisque turpis ipsum.</p>
+									<h2>Investment Opportunity</h2>
+									<p>Nomad is currently self-funded by its founders and is seeking additional investment in the form of a convertible note or simple agreement for future equity (SAFE) in order to accelerate its product development plan and build / test production intent prototypes before entering an equity financing round to raise capital for product industrialization.</p>
 								</section>
 							</div>
 							<div>
