--- a/index.html
+++ b/index.html
@@ -116,8 +116,8 @@
 											</div>
 										</div>
 										<ul class="actions">
-											<li><input type="submit" value="Send" class="primary" /></li>
-											<li><input type="reset" value="Reset" /></li>
+											<li><button type="submit" >Send</button></li>
+											<li><button type="reset" >Reset</button></li>
 										</ul>
 									</form>
 								</section>
