Change to NOMAD SXS

--- a/index.html
+++ b/index.html
@@ -30,18 +30,17 @@
 				<!-- Main -->
 					<div id="main">
 						<article class="thumb">
-							<a href="images/fulls/NOMAD.png" class="image"><img src="images/thumbs/logo.png" alt="" /></a>
-							<p>Nomad was founded in 2023 by Jim Fusco, Joe Morrow, and Ryan Bonde.  Combined, they have a wealth of experience in the Powersports industry – holding leadership positions in Sales, Distribution, Production, and Product Development / Engineering.  </p>
+							<a href="images/fulls/Coyote.jpg" class="image"><img src="images/thumbs/logo.png" alt="" /></a>
+							<p>NOMAD SXS's Flagship product - the COYOTE!</p>
 						</article>
 						<article class="thumb">
 							<a href="images/fulls/pipeline.jpg" class="image"><img src="images/thumbs/pipeline.jpg" alt="" /></a>
-							<h2>Pipeline Construction / Maintenance</h2>
+							<h2>Utility Construction / Maintenance</h2>
 							<p>Anywhere you need to go!</p>
 						</article>
-
 						<article class="thumb">
 							<a href="images/fulls/border.jpg" class="image"><img src="images/thumbs/border.jpg" alt="" /></a>
-							<h2>Border Patrol</h2>
+							<h2>Law Enforcement & Border Patrol</h2>
 							<p>How else you gonna catch those border jumpers?</p>
 						</article>
 						<article class="thumb">
@@ -55,14 +54,9 @@
 							<p>Hot stuff - coming through!</p>
 						</article>
 						<article class="thumb">
-							<a href="images/fulls/law_enforcement.jpg" class="image"><img src="images/thumbs/law_enforcement.jpg" alt="" /></a>
-							<h2>Law Enforcement</h2>
-							<p>Supertroopers!</p>
-						</article>
-						<article class="thumb">
 							<a href="images/fulls/construction.jpg" class="image"><img src="images/thumbs/construction.jpg" alt="" /></a>
 							<h2>Construction</h2>
-							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
+							<p>Putting things together</p>
 						</article>
 						<article class="thumb">
 							<a href="images/fulls/Transmission_lines.jpg" class="image"><img src="images/thumbs/Transmission_lines.jpg" alt="" /></a>
@@ -82,12 +76,7 @@
 						<article class="thumb">
 							<a href="images/fulls/mine.jpg" class="image"><img src="images/thumbs/mine.jpg" alt="" /></a>
 							<h2>Mining</h2>
-							<p>It would be a lot easier if they didn't have to walk...</p>
-						</article>
-						<article class="thumb">
-							<a href="images/fulls/scout.png" class="image"><img src="images/thumbs/scout.png" alt="" /></a>
-							<h2>NOMAD Scout</h2>
-							<p>Doesn't it look kinda KICK ASS?!?</p>
+							<p>That's a long way to walk</p>
 						</article>
 					</div>
 
