Correcting NOMAD Logo

--- a/index.html
+++ b/index.html
@@ -59,20 +59,16 @@
 							<p>Putting things together</p>
 						</article>
 						<article class="thumb">
-							<a href="images/fulls/Transmission_lines.jpg" class="image"><img src="images/thumbs/Transmission_lines.jpg" alt="" /></a>
-							<h2>Transmission Line Construction / Maintenance</h2>
-							<p>EV's don't run on hopes and dreams!</p>
-						</article>
-						<article class="thumb">
 							<a href="images/fulls/hay.jpg" class="image"><img src="images/thumbs/hay.jpg" alt="" /></a>
 							<h2>Field Work</h2>
 							<p>I'm sneezing just looking at that picture!</p>
 						</article>
+						<!--
 						<article class="thumb">
 							<a href="images/fulls/helicopter.jpg" class="image"><img src="images/thumbs/helicopter.jpg" alt="" /></a>
 							<h2>Military</h2>
 							<p>Get to the Chopper!!! - in Arnold Schwarzeneggar voice!</p>
-						</article>
+						</article>-->
 						<article class="thumb">
 							<a href="images/fulls/mine.jpg" class="image"><img src="images/thumbs/mine.jpg" alt="" /></a>
 							<h2>Mining</h2>
