Updated tile notes.

--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
 
 				<!-- Header -->
 					<header id="header">
-						<h1><a href="index.html"><img src="images/fulls/nomad_orange_transparent.png" /></a></h1>
+						<h1><img src="images/fulls/nomad_orange_transparent.png" /></h1>
 						<nav>
 							<ul>
-								<li><a href="#footer" class="icon solid fa-info-circle">Learn More</a></li>
+								<li><a href="#footer" class="icon solid fa-info-circle">Get in Touch</a></li>
 							</ul>
 						</nav>
 					</header>
@@ -31,37 +31,38 @@
 					<div id="main">
 						<article class="thumb">
 							<a href="images/fulls/Coyote.jpg" class="image"><img src="images/thumbs/logo.png" alt="" /></a>
-							<p>NOMAD SXS's Flagship product - the COYOTE!</p>
+							<h2>About us...</h2>
+							<p>NOMAD SXS is a team of industry professionals developing a vehicle that is built to work!</p>
 						</article>
 						<article class="thumb">
 							<a href="images/fulls/pipeline.jpg" class="image"><img src="images/thumbs/pipeline.jpg" alt="" /></a>
 							<h2>Utility Construction / Maintenance</h2>
-							<p>Anywhere you need to go!</p>
+							<p>Mobility and Flexibility - for when the job location changes every day.</p>
 						</article>
 						<article class="thumb">
 							<a href="images/fulls/border.jpg" class="image"><img src="images/thumbs/border.jpg" alt="" /></a>
 							<h2>Law Enforcement & Border Patrol</h2>
-							<p>How else you gonna catch those border jumpers?</p>
+							<p>Always ready to perform at a moment's notice.</p>
 						</article>
 						<article class="thumb">
 							<a href="images/fulls/cattle.jpg" class="image"><img src="images/thumbs/cattle.jpg" alt="" /></a>
-							<h2>Ranching</h2>
-							<p>Mmmmmm Steak!</p>
+							<h2>Ranching & Farming</h2>
+							<p>Aiding in effective land management.</p>
 						</article>
 						<article class="thumb">
 							<a href="images/fulls/firefighters.jpg" class="image"><img src="images/thumbs/firefighters.jpg" alt="" /></a>
 							<h2>Firefighting</h2>
-							<p>Hot stuff - coming through!</p>
+							<p>Dependable - at the most important times.</p>
 						</article>
 						<article class="thumb">
 							<a href="images/fulls/construction.jpg" class="image"><img src="images/thumbs/construction.jpg" alt="" /></a>
 							<h2>Construction</h2>
-							<p>Putting things together</p>
+							<p>Trustworthy - when schedules need to be met.</p>
 						</article>
 						<article class="thumb">
 							<a href="images/fulls/hay.jpg" class="image"><img src="images/thumbs/hay.jpg" alt="" /></a>
-							<h2>Field Work</h2>
-							<p>I'm sneezing just looking at that picture!</p>
+							<h2>Ranching & Farming</h2>
+							<p>Aiding in effective land management.</p>
 						</article>
 						<!--
 						<article class="thumb">
@@ -72,7 +73,7 @@
 						<article class="thumb">
 							<a href="images/fulls/mine.jpg" class="image"><img src="images/thumbs/mine.jpg" alt="" /></a>
 							<h2>Mining</h2>
-							<p>That's a long way to walk</p>
+							<p>Ready to tackle the most extreme environments.</p>
 						</article>
 					</div>
 
@@ -81,8 +82,8 @@
 						<div class="inner split">
 							<div>
 								<section>
-									<h2>Investment Opportunity</h2>
-									<p>Nomad is currently self-funded by its founders and is seeking additional investment in the form of a convertible note or simple agreement for future equity (SAFE) in order to accelerate its product development plan and build / test production intent prototypes before entering an equity financing round to raise capital for product industrialization.</p>
+									<h2>Want to know more?</h2>
+									<p>Fill out the form to the right and we'll get in touch as soon as we can!</p>
 								</section>
 							</div>
 							<div>
