Update to tiles and tile notes.

--- a/index.html
+++ b/index.html
@@ -44,11 +44,11 @@
 							<h2>Law Enforcement & Border Patrol</h2>
 							<p>Always ready to perform at a moment's notice.</p>
 						</article>
-						<article class="thumb">
+						<!--<article class="thumb">
 							<a href="images/fulls/cattle.jpg" class="image"><img src="images/thumbs/cattle.jpg" alt="" /></a>
 							<h2>Ranching & Farming</h2>
 							<p>Aiding in effective land management.</p>
-						</article>
+						</article>-->
 						<article class="thumb">
 							<a href="images/fulls/firefighters.jpg" class="image"><img src="images/thumbs/firefighters.jpg" alt="" /></a>
 							<h2>Firefighting</h2>
@@ -64,16 +64,15 @@
 							<h2>Ranching & Farming</h2>
 							<p>Aiding in effective land management.</p>
 						</article>
-						<!--
 						<article class="thumb">
-							<a href="images/fulls/helicopter.jpg" class="image"><img src="images/thumbs/helicopter.jpg" alt="" /></a>
+							<a href="images/fulls/convoy.jpg" class="image"><img src="images/thumbs/convoy.jpg" alt="" /></a>
 							<h2>Military</h2>
-							<p>Get to the Chopper!!! - in Arnold Schwarzeneggar voice!</p>
-						</article>-->
+							<p>Adaptable to any environment and any weather.</p>
+						</article>
 						<article class="thumb">
 							<a href="images/fulls/mine.jpg" class="image"><img src="images/thumbs/mine.jpg" alt="" /></a>
 							<h2>Mining</h2>
-							<p>Ready to tackle the most extreme environments.</p>
+							<p>Ready to tackle the most extreme conditions.</p>
 						</article>
 					</div>
 
