Update slide order and form title.

--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
 							<p>Trustworthy - when schedules need to be met.</p>
 						</article>
 						<article class="thumb">
-							<a href="images/fulls/hay.jpg" class="image"><img src="images/thumbs/hay.jpg" alt="" /></a>
-							<h2>Ranching & Farming</h2>
-							<p>Aiding in effective land management.</p>
+							<a href="images/fulls/mine.jpg" class="image"><img src="images/thumbs/mine.jpg" alt="" /></a>
+							<h2>Mining</h2>
+							<p>Ready to tackle the most extreme conditions.</p>
 						</article>
 						<article class="thumb">
 							<a href="images/fulls/convoy.jpg" class="image"><img src="images/thumbs/convoy.jpg" alt="" /></a>
@@ -70,9 +70,9 @@
 							<p>Adaptable to any environment and any weather.</p>
 						</article>
 						<article class="thumb">
-							<a href="images/fulls/mine.jpg" class="image"><img src="images/thumbs/mine.jpg" alt="" /></a>
-							<h2>Mining</h2>
-							<p>Ready to tackle the most extreme conditions.</p>
+							<a href="images/fulls/hay.jpg" class="image"><img src="images/thumbs/hay.jpg" alt="" /></a>
+							<h2>Ranching & Farming</h2>
+							<p>Aiding in effective land management.</p>
 						</article>
 					</div>
 
@@ -87,7 +87,7 @@
 							</div>
 							<div>
 								<section>
-									<h2>Get in touch</h2>
+									<!--<h2>Get in touch</h2>-->
 									<form method="post" action="https://formspree.io/f/mzbqovdl">
 										<div class="fields">
 											<div class="field half">
