--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<h1><img src="images/fulls/nomad_orange_transparent.png" /></h1>
+						<h1><img src="images/fulls/NOMADSXS_Name_Alt_Orange.png" /></h1>
 						<nav>
 							<ul>
 								<li><a href="#footer" class="icon solid fa-info-circle">Get in Touch</a></li>
@@ -30,49 +30,54 @@
 				<!-- Main -->
 					<div id="main">
 						<article class="thumb">
-							<a href="images/fulls/Coyote.jpg" class="image"><img src="images/thumbs/logo.png" alt="" /></a>
+							<a href="images/fulls/Coyote_Headlights.png" class="image"><img src="images/thumbs/NOMADSXS_Logo.png" alt="" /></a>
 							<h2>About us...</h2>
-							<p>NOMAD SXS is a team of industry professionals developing a vehicle that is built to work!</p>
+							<p>NOMAD SXS is a team of industry professionals developing a vehicle ready to meet the needs of the most demanding and underserved corners of the side-by-side market.</p>
 						</article>
 						<article class="thumb">
-							<a href="images/fulls/pipeline.jpg" class="image"><img src="images/thumbs/pipeline.jpg" alt="" /></a>
-							<h2>Utility Construction / Maintenance</h2>
-							<p>Mobility and Flexibility - for when the job location changes every day.</p>
+							<a href="images/fulls/Construction_Equipment_16_9_LongBed.png" class="image"><img src="images/thumbs/Construction_Equipment_16_9_LongBed.png" alt="" /></a>
+							<h2>Construction</h2>
+							<p>Durable - when schedules won't allow any downtime.</p>
 						</article>
 						<article class="thumb">
-							<a href="images/fulls/border.jpg" class="image"><img src="images/thumbs/border.jpg" alt="" /></a>
-							<h2>Law Enforcement & Border Patrol</h2>
-							<p>Always ready to perform at a moment's notice.</p>
+							<a href="images/fulls/Transmission_Line_16_9_Base.png" class="image"><img src="images/thumbs/Transmission_Line_16_9_Base.png" alt="" /></a>
+							<h2>Utility Maintenance</h2>
+							<p>Flexibile - for when the job location changes every day.</p>
 						</article>
-						<!--<article class="thumb">
-							<a href="images/fulls/cattle.jpg" class="image"><img src="images/thumbs/cattle.jpg" alt="" /></a>
+						<article class="thumb">
+							<a href="images/fulls/AggregateYard_16_9_LongBed.png" class="image"><img src="images/thumbs/AggregateYard_16_9_LongBed.png" alt="" /></a>
+							<h2>Resource Extraction</h2>
+							<p>An important part of day to day operations.</p>
+						</article>
+						<article class="thumb">
+							<a href="images/fulls/Hay_16_9_FlatBed.png" class="image"><img src="images/thumbs/Hay_16_9_FlatBed.png" alt="" /></a>
 							<h2>Ranching & Farming</h2>
 							<p>Aiding in effective land management.</p>
-						</article>-->
+						</article>
 						<article class="thumb">
-							<a href="images/fulls/firefighters.jpg" class="image"><img src="images/thumbs/firefighters.jpg" alt="" /></a>
+							<a href="images/fulls/Fire_16_9_Fire.png" class="image"><img src="images/thumbs/Fire_16_9_Fire.png" alt="" /></a>
 							<h2>Firefighting</h2>
 							<p>Dependable - at the most important times.</p>
 						</article>
 						<article class="thumb">
-							<a href="images/fulls/construction.jpg" class="image"><img src="images/thumbs/construction.jpg" alt="" /></a>
-							<h2>Construction</h2>
-							<p>Trustworthy - when schedules need to be met.</p>
+							<a href="images/fulls/Border_16_9_Base.png" class="image"><img src="images/thumbs/Border_16_9_Base.png" alt="" /></a>
+							<h2>Law Enforcement</h2>
+							<p>Always ready to perform at a moment's notice.</p>
 						</article>
 						<article class="thumb">
-							<a href="images/fulls/mine.jpg" class="image"><img src="images/thumbs/mine.jpg" alt="" /></a>
-							<h2>Mining</h2>
-							<p>Ready to tackle the most extreme conditions.</p>
-						</article>
-						<article class="thumb">
-							<a href="images/fulls/convoy.jpg" class="image"><img src="images/thumbs/convoy.jpg" alt="" /></a>
+							<a href="images/fulls/Helicopter2_16_9_Military.png" class="image"><img src="images/thumbs/Helicopter2_16_9_Military.png" alt="" /></a>
 							<h2>Military</h2>
-							<p>Adaptable to any environment and any weather.</p>
+							<p>Ready to serve.</p>
 						</article>
 						<article class="thumb">
-							<a href="images/fulls/hay.jpg" class="image"><img src="images/thumbs/hay.jpg" alt="" /></a>
-							<h2>Ranching & Farming</h2>
-							<p>Aiding in effective land management.</p>
+							<a href="images/fulls/Gravel_Road_16_9_FullCabin.png" class="image"><img src="images/thumbs/Gravel_Road_16_9_FullCabin.png" alt="" /></a>
+							<h2>Overlanding</h2>
+							<p>For those seeking travel to remote locations.</p>
+						</article>
+						<article class="thumb">
+							<a href="images/fulls/Snowy_Trail_Close_16_9_FullCab.png" class="image"><img src="images/thumbs/Snowy_Trail_Close_16_9_FullCab.png" alt="" /></a>
+							<h2>Adventure</h2>
+							<p>Adaptable to the most extreme environments.</p>
 						</article>
 					</div>
 
