Update to new Industrial Design

--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE HTML>
 <!--
-	NOMAD modification of Multiverse by HTML5 UP
+	NOMAD SXS modification of Multiverse by HTML5 UP
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 <html>
 	<head>
-		<title>NOMAD</title>
+		<title>NOMAD SXS</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -19,7 +19,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<h1><img src="images/fulls/NOMADSXS_Name_Alt_Orange.png" /></h1>
+						<h1><img src="images/fulls/NOMAD SXS NAME_ORANGE_20240805.png" /></h1>
 						<nav>
 							<ul>
 								<li><a href="#footer" class="icon solid fa-info-circle">Get in Touch</a></li>
@@ -30,52 +30,52 @@
 				<!-- Main -->
 					<div id="main">
 						<article class="thumb">
-							<a href="images/fulls/Coyote_Headlights.png" class="image"><img src="images/thumbs/NOMADSXS_Logo.png" alt="" /></a>
+							<a href="images/fulls/Coyote_Headlights_2024085.png" class="image"><img src="images/fulls/NOMAD_SXS_NAME_BLACK_BACKGROUND_20240805.png" alt="" /></a>
 							<h2>About us...</h2>
 							<p>NOMAD SXS is a team of industry professionals developing a vehicle ready to meet the needs of the most demanding and underserved corners of the side-by-side market.</p>
 						</article>
 						<article class="thumb">
-							<a href="images/fulls/Construction_Equipment_16_9_LongBed.png" class="image"><img src="images/thumbs/Construction_Equipment_16_9_LongBed.png" alt="" /></a>
+							<a href="images/fulls/Construction_Equipment_16_9_LongBed_20240805.png" class="image"><img src="images/fulls/Construction_Equipment_16_9_LongBed_20240805.png" alt="" /></a>
 							<h2>Construction</h2>
 							<p>Durable - when schedules won't allow any downtime.</p>
 						</article>
 						<article class="thumb">
-							<a href="images/fulls/Transmission_Line_16_9_Base.png" class="image"><img src="images/thumbs/Transmission_Line_16_9_Base.png" alt="" /></a>
+							<a href="images/fulls/Transmission_Line_16_9_Base_20240805.png" class="image"><img src="images/fulls/Transmission_Line_16_9_Base_20240805.png" alt="" /></a>
 							<h2>Utility Maintenance</h2>
 							<p>Flexibile - for when the job location changes every day.</p>
 						</article>
 						<article class="thumb">
-							<a href="images/fulls/AggregateYard_16_9_LongBed.png" class="image"><img src="images/thumbs/AggregateYard_16_9_LongBed.png" alt="" /></a>
+							<a href="images/fulls/Aggregate_Yard_16_9_LongBed_20240805.png" class="image"><img src="images/fulls/Aggregate_Yard_16_9_LongBed_20240805.png" alt="" /></a>
 							<h2>Resource Extraction</h2>
 							<p>An important part of day to day operations.</p>
 						</article>
 						<article class="thumb">
-							<a href="images/fulls/Hay_16_9_FlatBed.png" class="image"><img src="images/thumbs/Hay_16_9_FlatBed.png" alt="" /></a>
+							<a href="images/fulls/Hayfield_16_9_Flatbed_20240805.png" class="image"><img src="images/fulls/Hayfield_16_9_Flatbed_20240805.png" alt="" /></a>
 							<h2>Ranching & Farming</h2>
 							<p>Aiding in effective land management.</p>
 						</article>
 						<article class="thumb">
-							<a href="images/fulls/Fire_16_9_Fire.png" class="image"><img src="images/thumbs/Fire_16_9_Fire.png" alt="" /></a>
+							<a href="images/fulls/Fire_16_9_Red_20240805.png" class="image"><img src="images/fulls/Fire_16_9_Red_20240805.png" alt="" /></a>
 							<h2>Firefighting</h2>
 							<p>Dependable - at the most important times.</p>
 						</article>
 						<article class="thumb">
-							<a href="images/fulls/Border_16_9_Base.png" class="image"><img src="images/thumbs/Border_16_9_Base.png" alt="" /></a>
+							<a href="images/fulls/Border_16_9_Base_20240805.png" class="image"><img src="images/fulls/Border_16_9_Base_20240805.png" alt="" /></a>
 							<h2>Law Enforcement</h2>
 							<p>Always ready to perform at a moment's notice.</p>
 						</article>
 						<article class="thumb">
-							<a href="images/fulls/Helicopter2_16_9_Military.png" class="image"><img src="images/thumbs/Helicopter2_16_9_Military.png" alt="" /></a>
+							<a href="images/fulls/Military_Base_16_9_Sand_20240805.png" class="image"><img src="images/fulls/Military_Base_16_9_Sand_20240805.png" alt="" /></a>
 							<h2>Military</h2>
 							<p>Ready to serve.</p>
 						</article>
 						<article class="thumb">
-							<a href="images/fulls/Gravel_Road_16_9_FullCabin.png" class="image"><img src="images/thumbs/Gravel_Road_16_9_FullCabin.png" alt="" /></a>
+							<a href="images/fulls/Gravel_Road_16_9_FullCab_20240805.png" class="image"><img src="images/fulls/Gravel_Road_16_9_FullCab_20240805.png" alt="" /></a>
 							<h2>Overlanding</h2>
 							<p>For those seeking travel to remote locations.</p>
 						</article>
 						<article class="thumb">
-							<a href="images/fulls/Snowy_Trail_Close_16_9_FullCab.png" class="image"><img src="images/thumbs/Snowy_Trail_Close_16_9_FullCab.png" alt="" /></a>
+							<a href="images/fulls/Snowy_Trail_16_9_FullCab_20240805.png" class="image"><img src="images/fulls/Snowy_Trail_16_9_FullCab_20240805.png" alt="" /></a>
 							<h2>Adventure</h2>
 							<p>Adaptable to the most extreme environments.</p>
 						</article>
